@@ -6,10 +6,12 @@ New Features and Enhancements
 * Added CString class
    The CString class is intended to provide much of the same functionality
    as the CString class provided with MFC/ATL.
+* Added CMenu   
 
 
 Changes in detail
 -----------------
+- Added CMenu
 - Added CString
 - Added BSTR2A
 - Added BSTR2T
